Get rid of deprecation warning for Class#newInstance